--- a/.github/workflows/master_tstgithubchecker.yml
+++ b/.github/workflows/master_tstgithubchecker.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 env :
- AZURE_WEBAPP_PACKAGE_PATH : '.'
+ AZURE_WEBAPP_PACKAGE_PATH : './test'
 
 jobs:
   build:
@@ -56,4 +56,4 @@ jobs:
           app-name: 'tstgithubchecker'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5FE8E2EA2F01493BA316EA030E725D0F }
-          package: '${{env.AZURE_WEBAPP_PACKAGE_PATH/test}}'
+          package: ${{env.AZURE_WEBAPP_PACKAGE_PATH}}
