--- a/.github/workflows/master_tstgithubchecker.yml
+++ b/.github/workflows/master_tstgithubchecker.yml
@@ -8,9 +8,8 @@ on:
     branches:
       - master
   workflow_dispatch:
-
-env :
- AZURE_WEBAPP_PACKAGE_PATH : './test'
+env:
+  AZURE_WEBAPP_PACKAGE_PATH : './test/
 
 jobs:
   build:
@@ -56,4 +55,4 @@ jobs:
           app-name: 'tstgithubchecker'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5FE8E2EA2F01493BA316EA030E725D0F }
-          package: '${{env.AZURE_WEBAPP_PACKAGE_PATH}}'
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
