--- a/.github/workflows/master_tstgithubchecker.yml
+++ b/.github/workflows/master_tstgithubchecker.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
   deploy:
     runs-on: ubuntu-latest
