--- a/.github/workflows/master_tstgithubchecker.yml
+++ b/.github/workflows/master_tstgithubchecker.yml
@@ -8,8 +8,6 @@ on:
     branches:
       - master
   workflow_dispatch:
-env:
- AZURE_WEBAPP_PACKAGE_PATH : './test'
 
 jobs:
   build:
@@ -33,7 +31,8 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          path: ./test
+      
 
   deploy:
     runs-on: ubuntu-latest
@@ -55,4 +54,4 @@ jobs:
           app-name: 'tstgithubchecker'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5FE8E2EA2F01493BA316EA030E725D0F }}
-          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          package: ./test
