--- a/.github/workflows/master_tstgithubchecker.yml
+++ b/.github/workflows/master_tstgithubchecker.yml
@@ -23,9 +23,12 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          mkdir test
           npm install
           npm run build --if-present
           npm run test --if-present
+          copy . /test
+          
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
