--- a/.github/workflows/master_tstgithubchecker.yml
+++ b/.github/workflows/master_tstgithubchecker.yml
@@ -25,10 +25,8 @@ jobs:
         run: |
           mkdir test
           npm install
-          npm run build --if-present
+          npm run build --if-present > ./test
           npm run test --if-present
-          copy . /test
-          
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
